Ensure logo is the correct size on IE

--- a/en/_static/style.css
+++ b/en/_static/style.css
@@ -18,3 +18,6 @@ div.code-block-caption {
   border-radius: 4px 4px 0px 0px;
   background-color: #f5f5f5;
 }
+.logo {
+  width: 100% !important;
+}
